generated/db_instance.tf
resource "aws_db_instance" "tfer--weplat-ap2-rds" {
  allocated_storage                     = "20"
  auto_minor_version_upgrade            = "false"
  availability_zone                     = "ap-northeast-2c"
  backup_retention_period               = "7"
  backup_target                         = "region"
  backup_window                         = "17:14-17:44"
  ca_cert_identifier                    = "rds-ca-rsa2048-g1"
  copy_tags_to_snapshot                 = "true"
  customer_owned_ip_enabled             = "false"
  db_subnet_group_name                  = "${aws_db_subnet_group.tfer--weplat-ap2-db-subnet-group.name}"
  deletion_protection                   = "true"
  enabled_cloudwatch_logs_exports       = ["audit", "error"]
  engine                                = "mysql"
  engine_version                        = "8.0.35"
  iam_database_authentication_enabled   = "false"
  identifier                            = "weplat-ap2-rds"
  instance_class                        = "db.t3.medium"
  iops                                  = "3000"
  kms_key_id                            = "arn:aws:kms:ap-northeast-2:639122009176:key/15aaf4d5-28b8-4339-94a8-f983b802a48f"
  license_model                         = "general-public-license"
  maintenance_window                    = "sat:19:40-sat:20:10"
  max_allocated_storage                 = "0"
  monitoring_interval                   = "60"
  monitoring_role_arn                   = "arn:aws:iam::639122009176:role/rds-monitoring-role"
  multi_az                              = "true"
  network_type                          = "IPV4"
  option_group_name                     = "${aws_db_option_group.tfer--weplat-ap2-db-og.name}"
  parameter_group_name                  = "${aws_db_parameter_group.tfer--weplat-ap2-db-pg.name}"
  performance_insights_enabled          = "true"
  performance_insights_kms_key_id       = "arn:aws:kms:ap-northeast-2:639122009176:key/15aaf4d5-28b8-4339-94a8-f983b802a48f"
  performance_insights_retention_period = "7"
  port                                  = "3306"
  publicly_accessible                   = "false"
  storage_encrypted                     = "true"
  storage_throughput                    = "125"
  storage_type                          = "gp3"
  username                              = "weplat"
  vpc_security_group_ids                = ["sg-03e5981ac98b2325d"]
}
