generated/vpc.tf
resource "aws_vpc" "tfer--vpc-0c2a58035c2f90a99" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "172.31.0.0/16"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"
  ipv6_netmask_length                  = "0"
}

resource "aws_vpc" "tfer--vpc-0e5dffb22a77634a0" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "10.0.0.0/16"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"
  ipv6_netmask_length                  = "0"

  tags = {
    Name = "weplat-ap2-vpc"
  }

  tags_all = {
    Name = "weplat-ap2-vpc"
  }
}
